correct overflow on slide

--- a/src/containers/Slider/style.scss
+++ b/src/containers/Slider/style.scss
@@ -6,6 +6,8 @@
   max-width: 1440px;
   height: 586px;
 
+  overflow: hidden;
+
   .SlideCard {
     width: 100%;
     left: 0;
